// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentResponseTimesView when a matching sub component dependency has tags the tags are rendered in alphabetical order 1`] = `
"<div subcomponentdependencies=\\"[object Object]\\">
  <div>
    <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
      <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-info\\">
        <!---->
        No response times are available for this component. Possibly the
        component may not have been integrated with Zipkin yet.
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`ComponentResponseTimesView when a sub component dependency's source matches a known component renders the component's name instead of the component's id and an \`unrecognised component\` badge 1`] = `
"<div subcomponentdependencies=\\"[object Object]\\">
  <div>
    <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
      <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-info\\">
        <!---->
        No response times are available for this component. Possibly the
        component may not have been integrated with Zipkin yet.
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`ComponentResponseTimesView when a sub component dependency's target matches a known component renders the component's name instead of the component's id and an \`unrecognised component\` badge 1`] = `
"<div subcomponentdependencies=\\"[object Object]\\">
  <div>
    <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
      <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-info\\">
        <!---->
        No response times are available for this component. Possibly the
        component may not have been integrated with Zipkin yet.
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`ComponentResponseTimesView when direction prop is set to downstream when a sub component dependency's source is undefined and target matches the componentId prop renders a message saying there are no response times available 1`] = `
"<div subcomponentdependencies=\\"[object Object]\\">
  <div>
    <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
      <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-info\\">
        <!---->
        No response times are available for this component. Possibly the
        component may not have been integrated with Zipkin yet.
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`ComponentResponseTimesView when direction prop is set to downstream when no source of a sub component dependency matches the componentId prop renders a message saying there are no response times available 1`] = `
"<div subcomponentdependencies=\\"[object Object]\\">
  <div>
    <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
      <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-info\\">
        <!---->
        No response times are available for this component. Possibly the
        component may not have been integrated with Zipkin yet.
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`ComponentResponseTimesView when direction prop is set to downstream when no sub component dependencies match the componentId prop renders a message saying there are no response times available 1`] = `
"<div subcomponentdependencies=\\"[object Object]\\">
  <div>
    <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
      <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-info\\">
        <!---->
        No response times are available for this component. Possibly the
        component may not have been integrated with Zipkin yet.
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`ComponentResponseTimesView when direction prop is set to downstream when the source of a sub component dependency matches the componentId prop renders the details of the sub component dependency 1`] = `
"<div subcomponentdependencies=\\"[object Object]\\">
  <div>
    <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
      <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-info\\">
        <!---->
        No response times are available for this component. Possibly the
        component may not have been integrated with Zipkin yet.
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`ComponentResponseTimesView when direction prop is set to downstream when the sources of multiple sub component dependencies match the componentId prop renders the details of the sub component dependencies 1`] = `
"<div subcomponentdependencies=\\"[object Object]\\">
  <div>
    <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
      <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-info\\">
        <!---->
        No response times are available for this component. Possibly the
        component may not have been integrated with Zipkin yet.
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`ComponentResponseTimesView when direction prop is set to upstream when a sub component dependency's source is undefined and target matches the componentId prop renders the details of the sub component dependency 1`] = `
"<div subcomponentdependencies=\\"[object Object]\\">
  <div>
    <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
      <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-info\\">
        <!---->
        No response times are available for this component. Possibly the
        component may not have been integrated with Zipkin yet.
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`ComponentResponseTimesView when direction prop is set to upstream when no sub component dependencies match the componentId prop renders a message saying there are no response times available 1`] = `
"<div subcomponentdependencies=\\"[object Object]\\">
  <div>
    <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
      <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-info\\">
        <!---->
        No response times are available for this component. Possibly the
        component may not have been integrated with Zipkin yet.
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`ComponentResponseTimesView when direction prop is set to upstream when no target of a sub component dependency matches the componentId prop renders a message saying there are no response times available 1`] = `
"<div subcomponentdependencies=\\"[object Object]\\">
  <div>
    <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
      <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-info\\">
        <!---->
        No response times are available for this component. Possibly the
        component may not have been integrated with Zipkin yet.
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`ComponentResponseTimesView when direction prop is set to upstream when the source and target of a sub component dependency matches the componentId prop renders a message saying there are no response times available 1`] = `
"<div subcomponentdependencies=\\"[object Object]\\">
  <div>
    <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
      <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-info\\">
        <!---->
        No response times are available for this component. Possibly the
        component may not have been integrated with Zipkin yet.
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`ComponentResponseTimesView when direction prop is set to upstream when the target of a sub component dependency matches the componentId prop renders the details of the sub component dependency 1`] = `
"<div subcomponentdependencies=\\"[object Object]\\">
  <div>
    <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
      <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-info\\">
        <!---->
        No response times are available for this component. Possibly the
        component may not have been integrated with Zipkin yet.
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`ComponentResponseTimesView when direction prop is set to upstream when the targets of multiple sub component dependencies match the componentId prop renders the details of the sub component dependencies 1`] = `
"<div subcomponentdependencies=\\"[object Object]\\">
  <div>
    <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
      <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-info\\">
        <!---->
        No response times are available for this component. Possibly the
        component may not have been integrated with Zipkin yet.
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`ComponentResponseTimesView when subComponentDependencies prop is not set renders a message saying there are no response times available 1`] = `
"<div>
  <div>
    <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
      <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-info\\">
        <!---->
        No response times are available for this component. Possibly the
        component may not have been integrated with Zipkin yet.
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`ComponentResponseTimesView when there is no duration object for multiple sub component dependencies renders the word \`unknown\` for each duration stat 1`] = `
"<div subcomponentdependencies=\\"[object Object]\\">
  <div>
    <transition-stub name=\\"\\" css=\\"true\\" enterclass=\\"\\" leaveclass=\\"show\\" entertoclass=\\"show\\" leavetoclass=\\"\\" enteractiveclass=\\"\\" leaveactiveclass=\\"\\" class=\\"my-3\\">
      <div role=\\"alert\\" aria-live=\\"polite\\" aria-atomic=\\"true\\" class=\\"alert alert-info\\">
        <!---->
        No response times are available for this component. Possibly the
        component may not have been integrated with Zipkin yet.
      </div>
    </transition-stub>
  </div>
</div>"
`;
